add Translations to Discord

--- a/spigot/src/main/resources/language/english.txt
+++ b/spigot/src/main/resources/language/english.txt
@@ -1,13 +1,18 @@
-startup-translations = The translations have been loaded (took %time%ms)
-startup-ranks = The ranks have been loaded (took %time%ms)
-invalid-code = &4This is not a valid code. Please note those codes are case sensitive. It could also have been expired (codes expire after 5 minutes).
-ranksync-command-usage = &4Please use the command as like this: &c/ranksync %services% <code>
-ranksync-command-request-limit = &4Slow down brother, you're only allowed to do this every &c 2 &4seconds
-ranksync-command-linked = &aYour account has been linked!
-ranksync-command-already-linked =&4Your account has already been linked to &c%service%
-ranksync-command-get-code = &4You'll have to get a code by &c%explanation% &4and link your account by typing &c/ranksync %service% THE_CODE_%SERVICE%_GAVE_YOU &4into the Minecraft server
-command-playeronly = &4You should be a player to execute this command
-unsync-command-unlinked = &aYour account has been unlinked!
-unsync-command-not-linked = &4Your account hasn't been linked to: &c%service%
-unsync-command-invalid-service = &c%service% &4isn't a valid service, please use one of those: &c%services%
-unsync-command-usage = &4Please use the command as like this: &c/unsync %services%
+minecraft-startup-translations = The translations have been loaded (took %time%ms)
+minecraft-startup-ranks = The ranks have been loaded (took %time%ms)
+minecraft-invalid-code = &4This is not a valid code. Please note those codes are case sensitive. It could also have been expired (codes expire after 5 minutes).
+minecraft-ranksync-command-usage = &4Please use the command as like this: &c/ranksync %services% <code>
+minecraft-ranksync-command-request-limit = &4Slow down brother, you're only allowed to do this every &c 2 &4seconds
+minecraft-ranksync-command-linked = &aYour account has been linked!
+minecraft-ranksync-command-already-linked =&4Your account has already been linked to &c%service%
+minecraft-ranksync-command-get-code = &4You'll have to get a code by &c%explanation% &4and link your account by typing &c/ranksync %service% THE_CODE_%SERVICE%_GAVE_YOU &4into the Minecraft server
+minecraft-command-playeronly = &4You should be a player to execute this command
+minecraft-unsync-command-unlinked = &aYour account has been unlinked!
+minecraft-unsync-command-not-linked = &4Your account hasn't been linked to: &c%service%
+minecraft-unsync-command-invalid-service = &c%service% &4isn't a valid service, please use one of those: &c%services%
+minecraft-unsync-command-usage = &4Please use the command as like this: &c/unsync %services%
+discord-link-command-already-linked = Your account has already been linked %name%
+discord-link-command-rightthere = Your message is right there ^
+discord-link-command-request-limit = You are only allowed to do this every two minutes %name%!
+discord-link-command-public = Thanks %name% you'll find the secret code in your private messages. DON'T share this code!
+discord-link-command-private = Hello %name% and thanks for linking your Minecraft account! !n Your private key is: `%key%` please DON'T share this code with anyone.!nTo link your account please enter: `/ranksync Discord %key%` into Minecraft. !n This will automatically give you the right Discord ranks. !n!n Have a nice day :D
