--- a/spigot/src/main/resources/language/english.txt
+++ b/spigot/src/main/resources/language/english.txt
@@ -11,6 +11,7 @@ minecraft-unsync-command-unlinked = &aYour account has been unlinked!
 minecraft-unsync-command-not-linked = &4Your account hasn't been linked to: &c%service%
 minecraft-unsync-command-invalid-service = &c%service% &4isn't a valid service, please use one of those: &c%services%
 minecraft-unsync-command-usage = &4Please use the command as like this: &c/unsync %services%
+minecraft-discord-linkinfo = type !link in the Bot channel on Discord
 discord-link-command-already-linked = Your account has already been linked %name%
 discord-link-command-rightthere = Your message is right there ^
 discord-link-command-request-limit = You are only allowed to do this every two minutes %name%!
