--- a/spigot/src/main/resources/language/dutch.txt
+++ b/spigot/src/main/resources/language/dutch.txt
@@ -16,4 +16,4 @@ discord-link-command-already-linked = Jouw account is al gesynchroniseerd %name%
 discord-link-command-rightthere = Je bericht is daar ^
 discord-link-command-request-limit = Je mag dit slechts één keer per twee minuten doen %name%!
 discord-link-command-public = Bedankt %name% je kan de geheime code in jouw privé berichten vinden. Deel deze code NIET!
-discord-link-command-private = Hallo %name% en bedankt voor het synchroniseren Minecraft account! !n Je geheime code is: `%key%` deel deze code met NIEMAND. !nOm je account te synchroniseren, typ: `/ranksync Discord %key%` in de Minecraft server. !n Dis zal je automatisch de juiste Discord rollen geven. !n!n Een fijne dag verder :D
+discord-link-command-private = Hallo %name% en bedankt voor het synchroniseren Minecraft account! !nJe geheime code is: `%key%` deel deze code met NIEMAND. !nOm je account te synchroniseren, typ: `/ranksync Discord %key%` in de Minecraft server. !nDit zal je automatisch de juiste Discord rollen geven. !n!nEen fijne dag verder :D
