--- a/spigot/src/main/resources/language/english.txt
+++ b/spigot/src/main/resources/language/english.txt
@@ -1,19 +1,19 @@
-minecraft-startup-translations = The translations have been loaded (took %time%ms)
-minecraft-startup-ranks = The ranks have been loaded (took %time%ms)
-minecraft-invalid-code = &4This is not a valid code. Please note those codes are case sensitive. It could also have been expired (codes expire after 5 minutes).
-minecraft-ranksync-command-usage = &4Please use the command as like this: &c/ranksync %services% <code>
-minecraft-ranksync-command-request-limit = &4Slow down brother, you're only allowed to do this every &c 2 &4seconds
+minecraft-startup-translations = Translations have been loaded. (took %time%ms)
+minecraft-startup-ranks = Ranks have been loaded. (took %time%ms)
+minecraft-invalid-code = &4The code you entered is invalid or expired (codes expire after 5 minutes). Please note that codes are case-sensitive!
+minecraft-ranksync-command-usage = &4Please use that command like this: &c/ranksync %services% <code>
+minecraft-ranksync-command-request-limit = &4Slow down, brother! You're only allowed to do this every &c2 &4seconds.
 minecraft-ranksync-command-linked = &aYour account has been linked!
-minecraft-ranksync-command-already-linked =&4Your account has already been linked to &c%service%
-minecraft-ranksync-command-get-code = &4You'll have to get a code by &c%explanation% &4and link your account by typing &c/ranksync %service% THE_CODE_%SERVICE%_GAVE_YOU &4into the Minecraft server
-minecraft-command-playeronly = &4You should be a player to execute this command
-minecraft-unsync-command-unlinked = &aYour account has been unlinked!
+minecraft-ranksync-command-already-linked =&4Your account is already linked to &c%service%.
+minecraft-ranksync-command-get-code = &4You have to get a code by &c%explanation% &4and then link your accounts by typing &c/ranksync %service% THE_CODE_%SERVICE%_GAVE_YOU &4on the Minecraft server.
+minecraft-command-playeronly = &4Only players can execute this command.
+minecraft-unsync-command-unlinked = &aYour account has been unlinked.
 minecraft-unsync-command-not-linked = &4Your account hasn't been linked to: &c%service%
-minecraft-unsync-command-invalid-service = &c%service% &4isn't a valid service, please use one of those: &c%services%
-minecraft-unsync-command-usage = &4Please use the command as like this: &c/unsync %services%
-minecraft-discord-linkinfo = type !link in the Bot channel on Discord
-discord-link-command-already-linked = Your account has already been linked %name%
-discord-link-command-rightthere = Your message is right there ^
-discord-link-command-request-limit = You are only allowed to do this every two minutes %name%!
-discord-link-command-public = Thanks %name% you'll find the secret code in your private messages. DON'T share this code!
-discord-link-command-private = Hello %name% and thanks for linking your Minecraft account! !nYour private key is: `%key%` please DON'T share this code with anyone.!nTo link your account please enter: `/ranksync Discord %key%` into Minecraft. !nThis will automatically give you the right Discord ranks. !n!nHave a nice day :D
+minecraft-unsync-command-invalid-service = &c%service% &4isn't a valid service. Please use one of the following: &c%services%
+minecraft-unsync-command-usage = &4Please use that command like this: &c/unsync %services%
+minecraft-discord-linkinfo = Type !link in the Discord channel containing the RankSync bot.
+discord-link-command-already-linked = Your account has already been linked, %name%!
+discord-link-command-rightthere = Your message is right here ^
+discord-link-command-request-limit = You are only allowed to do this every two minutes, %name%!
+discord-link-command-public = Thanks, %name%! You'll find the secret code in your private messages. DON'T share this code!
+discord-link-command-private = Hello, %name%! Thanks for linking your Minecraft account! !nYour private key is: `%key%` please DON'T share this code with anyone.!nTo link your account please enter: `/ranksync Discord %key%` on the Minecraft Server. !nThis will link your account and give you the right rank.!n!nHave a nice day! :D
