update the language helper to allow automatic translation updates

--- a/spigot/src/main/resources/language/dutch.txt
+++ b/spigot/src/main/resources/language/dutch.txt
@@ -12,8 +12,10 @@ minecraft-unsync-command-not-linked = &4Je account is niet gesynchroniseerd met:
 minecraft-unsync-command-invalid-service = &c%service% &4is geen valide service, gebruik alsjeblieft een van de volgende: &c%services%
 minecraft-unsync-command-usage = &4Gebruik dit commando alsjeblieft op de volgende manier: &c/unsync %services%
 minecraft-discord-linkinfo = typ !link in het bot kanaal op Discord
+minecraft-invalid-rank = %rank% is geen valide rank op %platform%
 discord-link-command-already-linked = Jouw account is al gesynchroniseerd %name%
 discord-link-command-rightthere = Je bericht is daar ^
 discord-link-command-request-limit = Je mag dit slechts één keer per twee minuten doen %name%!
 discord-link-command-public = Bedankt %name% je kan de geheime code in jouw privé berichten vinden. Deel deze code NIET!
 discord-link-command-private = Hallo %name% en bedankt voor het synchroniseren Minecraft account! !nJe geheime code is: `%key%` deel deze code met NIEMAND. !nOm je account te synchroniseren, typ: `/ranksync Discord %key%` in de Minecraft server. !nDit zal je automatisch de juiste Discord rollen geven. !n!nEen fijne dag verder :D
+discord-database-version-unknown = Jouw versie: "%version%" wordt niet herkent door de database updater
