--- a/spigot/src/main/resources/language/english.txt
+++ b/spigot/src/main/resources/language/english.txt
@@ -12,8 +12,10 @@ minecraft-unsync-command-not-linked = &4Your account hasn't been linked to: &c%s
 minecraft-unsync-command-invalid-service = &c%service% &4isn't a valid service. Please use one of the following: &c%services%
 minecraft-unsync-command-usage = &4Please use that command like this: &c/unsync %services%
 minecraft-discord-linkinfo = Type !link in the Discord channel containing the RankSync bot.
+minecraft-invalid-rank = %rank% is not a valid rank on %platform%
 discord-link-command-already-linked = Your account has already been linked, %name%!
 discord-link-command-rightthere = Your message is right here ^
 discord-link-command-request-limit = You are only allowed to do this every two minutes, %name%!
 discord-link-command-public = Thanks, %name%! You'll find the secret code in your private messages. DON'T share this code!
 discord-link-command-private = Hello, %name%! Thanks for linking your Minecraft account! !nYour private key is: `%key%` please DON'T share this code with anyone.!nTo link your account please enter: `/ranksync Discord %key%` on the Minecraft Server. !nThis will link your account and give you the right rank.!n!nHave a nice day! :D
+discord-database-version-unknown = Your version: "%version%" isn't known by the database updater
