--- a/spigot/src/main/resources/language/english.txt
+++ b/spigot/src/main/resources/language/english.txt
@@ -1,7 +1,7 @@
 minecraft-startup-translations = Translations have been loaded. (took %time%ms)
 minecraft-startup-ranks = Ranks have been loaded. (took %time%ms)
 minecraft-invalid-code = &4The code you entered is invalid or expired (codes expire after 5 minutes). Please note that codes are case-sensitive!
-minecraft-ranksync-command-usage = &4Please use that command like this: &c/ranksync %services% <code>
+minecraft-ranksync-command-usage = &4Please use that command like this: &c/%command% %services% <code>
 minecraft-ranksync-command-request-limit = &4Slow down, brother! You're only allowed to do this every &c2 &4seconds.
 minecraft-ranksync-command-linked = &aYour account has been linked!
 minecraft-ranksync-command-already-linked =&4Your account is already linked to &c%service%.
@@ -10,7 +10,7 @@ minecraft-command-playeronly = &4Only players can execute this command.
 minecraft-unsync-command-unlinked = &aYour account has been unlinked.
 minecraft-unsync-command-not-linked = &4Your account hasn't been linked to: &c%service%
 minecraft-unsync-command-invalid-service = &c%service% &4isn't a valid service. Please use one of the following: &c%services%
-minecraft-unsync-command-usage = &4Please use that command like this: &c/unsync %services%
+minecraft-unsync-command-usage = &4Please use that command like this: &c/%command% %services%
 minecraft-discord-linkinfo = Type !link in the Discord channel containing the RankSync bot.
 minecraft-invalid-rank = %rank% is not a valid rank on %platform%
 discord-link-command-already-linked = Your account has already been linked, %name%!
