--- a/server/src/main/resources/language/deutsch.txt
+++ b/server/src/main/resources/language/deutsch.txt
@@ -1,21 +1,21 @@
 minecraft-startup-translations = Übersetzung wurde geladen. (dauerte %time%ms)
 minecraft-startup-ranks = Ränge wurden geladen. (dauerte %time%ms)
 minecraft-invalid-code = &4Der eingegebene Code ist ungültig oder abgelaufen. (Codes laufen nach 5 Minuten ab). Gross und Kleinschreibung beachten!
-minecraft-ranksync-command-usage = &4Bitte nutze den Befehl so: &c/%command% %services% <Code>
+minecraft-ranksync-command-usage = &4Bitte benutze den Befehl so: &c/%command% %services% <Code>
 minecraft-ranksync-command-request-limit = &4Langsam! Du kannst dies nur alle &c2 &4Sekunden machen..
 minecraft-ranksync-command-linked = &aDein Account wurde verlinkt!
 minecraft-ranksync-command-already-linked =&4Dein Account ist bereits verlinkt mit &c%service%.
 minecraft-ranksync-command-get-code = &4Du must zuerst deinen Code mit &c%explanation% &4abrufen und dann dein Account mit &c/ranksync %service% DER_CODE_VON_%SERVICE% &4auf dem Minecraftserver verlinken.
-minecraft-command-playeronly = &4Only players can execute this command.
-minecraft-unsync-command-unlinked = &aYour account has been unlinked.
-minecraft-unsync-command-not-linked = &4Your account hasn't been linked to: &c%service%
-minecraft-unsync-command-invalid-service = &c%service% &4isn't a valid service. Please use one of the following: &c%services%
-minecraft-unsync-command-usage = &4Please use that command like this: &c/%command% %services%
-minecraft-discord-linkinfo = Type !link in the Discord channel containing the RankSync bot.
-minecraft-invalid-rank = %rank% is not a valid rank on %platform%
-discord-link-command-already-linked = Your account has already been linked, %name%!
-discord-link-command-rightthere = Your message is right here ^
-discord-link-command-request-limit = You are only allowed to do this every two minutes, %name%!
-discord-link-command-public = Thanks, %name%! You'll find the secret code in your private messages. DON'T share this code!
-discord-link-command-private = Hello, %name%! Thanks for linking your Minecraft account! !nYour private key is: `%key%` please DON'T share this code with anyone.!nTo link your account please enter: `/ranksync Discord %key%` on the Minecraft Server. !nThis will link your account and give you the right rank.!n!nHave a nice day! :D
-discord-database-version-unknown = Your version: "%version%" isn't known by the database updater
+minecraft-command-playeronly = &4Nur Spieler können diesen Befehl nutzen.
+minecraft-unsync-command-unlinked = &aDein Account wurde von %service% getrennt.
+minecraft-unsync-command-not-linked = &4Dein Account wurde nicht verlinkt mit: &c%service%
+minecraft-unsync-command-invalid-service = &c%service% &4ist kein gültiger Service. Bitte nutze ienen der folgenden Services: &c%services%
+minecraft-unsync-command-usage = &4Bitte benutze den Befehl so: &c/%command% %services%
+minecraft-discord-linkinfo = Tippe !link in den Discord Channel des Bots ein.
+minecraft-invalid-rank = %rank% ist kein gültiger Rang auf %platform%
+discord-link-command-already-linked = %name% dein Account wurde bereits verlinkt!
+discord-link-command-rightthere = Deine Nachricht ist hier ^
+discord-link-command-request-limit = %name% du kannst das nur alle 2 Minuten machen!
+discord-link-command-public = Danke, %name%! Du findest deinen Code in einer Privaten Nachricht. Teile diesen Code NICHT mit anderen!
+discord-link-command-private = Hallo, %name%! Danke das du deinen Account verlinkst! !nDein Persönlicher Code ist: `%key%` bitte teile diesen Code NICHT mit anderen.!nUm deinen Account zu verlinken gib folgendes auf dem Minecraftserver ein: `/ranksync Discord %key%`. !nDies verlinkt dein Account und erteilt dir den Richtigen Rang.!n!nViel Spaß!
+discord-database-version-unknown = Deine Version: "%version%" ist dem Updater unbekannt.
