--- a/server/src/main/resources/language/french.txt
+++ b/server/src/main/resources/language/french.txt
@@ -1,21 +1,21 @@
 minecraft-startup-translations = Les traductions ont été chargées. (%time%ms)
 minecraft-startup-ranks = Les rangs ont été chargés. (%time%ms)
-minecraft-invalid-code = &4Le code spécifié est invalide ou à expiré (expiration après 5 minutes). Veuillez prendre en comptes les majuscules !
+minecraft-invalid-code = &4Le code spécifié est invalide ou à expiré (expiration après 5 minutes). Veuillez prendre en compte les majuscules !
 minecraft-ranksync-command-usage = &4Veuillez utiliser cette commande comme ceci: &c/%command% %services% <code>
 minecraft-ranksync-command-request-limit = &4Ralentissez ! Vous ne pouvez faire cela que toutes les &c2 &4secondes.
 minecraft-ranksync-command-linked = &aVotre comptes ont été synchronisés !
 minecraft-ranksync-command-already-linked =&4Votre compte est déjà synchronisé à &c%service%.
 minecraft-ranksync-command-get-code = &4Vous devez obtenir un code en &c%explanation% &4et synchroniser vos comptes en utilisant &c/ranksync %service% LE_CODE_%SERVICE%_VOUS_A_DONNE &4en jeu.
-minecraft-command-playeronly = &4Seuls les joueurs peuvent éxécuter cette commande.
-minecraft-unsync-command-unlinked = &aVotre compte à été désynchronisé.
+minecraft-command-playeronly = &4Seuls les joueurs peuvent exécuter cette commande.
+minecraft-unsync-command-unlinked = &aVotre compte a été désynchronisé.
 minecraft-unsync-command-not-linked = &4Votre compte n'a pas été synchronisé à: &c%service%
 minecraft-unsync-command-invalid-service = &c%service% &4n'est pas un service valide. Veuillez utiliser l'un des services suivants: &c%services%
 minecraft-unsync-command-usage = &4Veuillez utiliser cette commande comme ceci: &c/%command% %services%
 minecraft-discord-linkinfo = Entrez !link dans le salon discord adéquat.
 minecraft-invalid-rank = %rank% n'est pas un rang valide sur la plateforme %platform%
-discord-link-command-already-linked = Votre compte à déjà été synchronisé, %name% !
+discord-link-command-already-linked = Votre compte a déjà été synchronisé, %name% !
 discord-link-command-rightthere = Votre message est juste ici ^
 discord-link-command-request-limit = Vous ne pouvez effectuez cela qu'une fois toutes les 2 minutes, %name% !
 discord-link-command-public = Merci, %name% ! Vous trouverez votre code secret dans vos messages privés. Ne partagez ce code à qui que ce soit !
 discord-link-command-private = Hey, %name% ! Merci d'avoir synchronisé ton compte ! !nTa clé privée est: `%key%` Merci de NE PAS partager cette clé.!nPour valide la synchronisation, merci de taper: `/ranksync Discord %key%` en jeu. !nCela permettra de synchroniser tes comptes.!n!nPasse une bonne journée ! :D
-discord-database-version-unknown = Votre version: "%version%" n'est pas reconnue par l'hote de mises à jour de la base de données
+discord-database-version-unknown = Votre version: "%version%" n'est pas reconnue par l'hôte de mises à jour de la base de données
